Modified navbar and footer for admin, user and not signed in

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,9 +8,8 @@
               Offering only the best things that we ourselves believe better than any other place you'd pay for your vacation.
               Leave all the hassle to look for affordable price to us, we are really good at it.
           </p>
-
-
         </div>
+
         <div class="col l3 s12">
           <h5 class="white-text">Featured</h5>
           <ul>
@@ -20,14 +19,24 @@
             <li><a class="white-text" href="#!">Honeymoon Packages</a></li>
           </ul>
         </div>
+
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><%= link_to 'Login', new_user_session_path %></li>
-            <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-            <li><%= link_to 'Manage Reservations', your_reservations_path %></li>
+            <% if (!user_signed_in?) %>
+              <li><%= link_to 'Login', new_user_session_path %></li>
+              <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+            <% elsif (!current_user.is_admin?) %>
+              <li><%= link_to 'Facebook', 'https://www.facebook.com/buyticketsmy' %></li>
+              <li><%= link_to 'Instagram', 'https://www.instagram.com' %></li>
+            <% else %>
+              <li><%= link_to 'Admin Dashboard', dashboard_path %></li>
+              <li><%= link_to 'Manage Reservations', your_reservations_path %></li>
+              <li><%= link_to 'Create Activity', new_activity_path %></li>
+            <% end %>
           </ul>
         </div>
+
       </div>
     </div>
     <div class="footer-copyright grey darken-4">
@@ -35,33 +44,26 @@
       &copy; 2017 - 2018 <%= link_to 'BuyTickets.my', 'https://www.facebook.com/buyticketsmy' %>
       </div>
     </div>
-  </footer>
+</footer>
 
-    <script>
-        $(document).ready(function () {
+<script>
+    $(document).ready(function () {
 
-            //Initiate Slider
-            /* global $ */
-            $('.slider').slider({
-               indicators: false,
-               height: 500,
-               transition: 500,
-               interval: 6000
-            });
-
-            //Initiate Dropdown
-            $(".dropdown-trigger").dropdown();
-
-            //Initiate Sidenav
-            $('.sidenav').sidenav({
-              edge: 'right'
-            });
-
-            //Initiate Modal
-            $(document).ready(function(){
-              $('.modal').modal();
-            });
-
-
+        //Initiate Slider
+        /* global $ */
+        $('.slider').slider({
+           indicators: false,
+           height: 400,
+           transition: 500,
+           interval: 6000
         });
-    </script>
+
+        //Initiate Dropdown
+        $(".dropdown-trigger").dropdown();
+
+        //Initiate Sidenav
+        $('.sidenav').sidenav({
+          edge: 'right'
+        });
+    });
+</script>
