Change car rentals menu name

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="col s3">
-                <%= link_to 'Rental Cars', rental_cars_path, class: "waves-effect waves-light btn-flat" %>
+                <%= link_to 'Car Rental', rental_cars_path, class: "waves-effect waves-light btn-flat" %>
             </div>
             <div class="col s3">
                 <a href="packages.html" class="waves-effect waves-light btn-flat">Packages</a>
