--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -28,7 +28,7 @@
               <li><%= link_to 'Sign Up', new_user_registration_path %></li>
             <% elsif (!current_user.is_admin?) %>
               <li><%= link_to 'Facebook', 'https://www.facebook.com/buyticketsmy' %></li>
-              <li><%= link_to 'Instagram', 'https://www.instagram.com' %></li>
+              <li><%= link_to 'Instagram', 'https://www.instagram.com/buytickets.my' %></li>
             <% else %>
               <li><%= link_to 'Admin Dashboard', dashboard_path %></li>
               <li><%= link_to 'Manage Reservations', your_reservations_path %></li>
