--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -11,7 +11,7 @@
         <div class="row">
           <div class="input-field col s12">
             <i class="material-icons prefix">date_range</i>
-            <%= f.text_field :arrival, placeholder: "Select your date", type: "text" %>
+            <%= f.text_field :arrival, placeholder: "Select your date", type: "text", autocomplete: "off" %>
           </div><!-- col -->
         </div><!-- row -->
         <div class="collection">
