--- a/app/views/reservations/your_activities.html.erb
+++ b/app/views/reservations/your_activities.html.erb
@@ -1,22 +1,64 @@
+
+<!-- SEARCH FILTER -->
 <div class="container">
   <div class="row">
     <div class="col s12">
       <div class="card">
         <div class="card-content">
-          <span class="card-title">Your Activities</span>
-          <div class="row">
+          <h5 class="center">Your Activities</h5>
+          <p class="center">Use the date selection to filter the results</p>
+
+        </div><!-- card-content -->
+      </div><!-- card -->
+    </div><!-- col -->
+  </div><!-- row -->
+
+  <!-- RESERVATION LIST -->
+  <div class="row">
+    <div class="col s12">
+      <div class="card">
+        <div class="card-content">
+          <ul class="collapsible popout">
             <% @bookings.each do |booking| %>
-            <div class="col s4">
-              <%= booking.arrival.strftime("%d/%m/%Y") %>
-            </div><!-- col -->
-            <div class="col s8">
-              <%= link_to booking.activity.name, activity_path(booking.activity) %>
-            </div><!-- col -->
-            <br/>
+                <li>
+                  <div class="collapsible-header">
+                    BOOKING ID: <%= booking.id %> | Activity Name: <%= booking.activity.name %> <% if booking.Waiting? %>
+                                                                                            <span class="new badge red" data-badge-caption=""><%= booking.status %></span>
+                                                                                          <% elsif booking.Approved? %>
+                                                                                            <span class="new badge green" data-badge-caption=""><%= booking.status %></span>
+                                                                                          <% else %>
+                                                                                            <span class="new badge grey" data-badge-caption=""><%= booking.status %></span>
+                                                                                          <% end %>
+                  </div><!-- collapsible-header -->
+                  <div class="collapsible-body">
+                    <h5>Guest Email: <%= booking.user.email %> </h5>
+                    <p>Phone No: <%= booking.user.phone_number %></p>
+                    <p>Arrival Date: <%= booking.arrival.strftime("%d/%m/%Y") %></p>
+                    <p>Adult: <%= booking.my_adult_count %></p>
+                    <p>Child: <%= booking.my_child_count %></p><hr/><br/>
+                    <p>Total: MYR <%= booking.total %></p><br/>
+                    <i class="material-icons">error</i><span><p> Once the payment has been made, your booking are confirmed.
+                    Please take note of the refund and cancellation policies of this reservation.</p></span>
+                  </div><!-- collapsible-body -->
+                </li>
             <% end %>
-          </div><!-- row -->
+          </ul>
         </div><!-- card-content -->
       </div><!-- card -->
     </div><!-- col -->
   </div><!-- row -->
 </div><!-- container -->
+
+<script>
+  $(document).ready(function(){
+    $('.collapsible').collapsible();
+  });
+  $('#search_arrival').datepicker({
+    dateFormat: 'dd-mm-yy',
+    onSelect: function(selected) {
+
+      $('#btn-search').attr('disabled', false);
+
+    }
+  });
+</script>
