--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,13 @@
 <!-- Dropdown Desktop -->
 <ul id="dropdown-lg" class="dropdown-content">
   <li><%= link_to 'Your Activities', your_activities_path %></li>
-  <li><p>Edit Profile</p></li>
+  <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
   <li><%= link_to 'LOGOUT', destroy_user_session_path, method: :delete %></li>
 </ul>
 <!-- Sidenav Menu -->
 <ul id="mobile-menu" class="sidenav">
   <li><%= link_to 'Your Activities', your_activities_path %></li>
-  <li><p>Edit Profile</p></li>
+  <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
   <li><%= link_to 'LOGOUT', destroy_user_session_path, method: :delete %></li>
 </ul>
 <div class="navbar-fixed">
