--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -6,7 +6,10 @@
         <div class="card-content">
           <h5 class="center">Reservation List</h5>
           <p class="center">Use the date selection to filter the results</p><br/>
-
+          <div class="row">
+            <div class="col s12">
+            </div><!-- col -->
+          </div><!-- row -->
         </div><!-- card-content -->
       </div><!-- card -->
     </div><!-- col -->
