--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -4,8 +4,8 @@
     <div class="col s12">
       <div class="card">
         <div class="card-content">
-          <h5 class="center">Reservation List</h5>
-          <p class="center">Use the date selection to filter the results</p><br/>
+          <h5 class="center">Manage Reservations</h5>
+          <p class="center">Please send payment instructions to email and phone number using booking ID</p>
           <div class="row">
             <div class="col s12">
             </div><!-- col -->
