--- a/app/views/activities/photos.html.erb
+++ b/app/views/activities/photos.html.erb
@@ -19,6 +19,14 @@
                 </div><!-- file input-field --></br>
 
                 <div class="row">
+                  <% (0...@activity.images.count).each do |image| %>
+                    <div class="col s12">
+                      <%= image_tag (@activity.thumbnail(image)) %>
+                    </div><!-- col -->
+                  <% end %>
+                </div><!-- row -->
+
+                <div class="row">
                   <div class="col s12">
                     <%= button_tag type: "submit", class: "btn waves-effect waves-light", name: "action" do %>
                       Update<span><i class="material-icons right">update</i></span>
