--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -77,7 +77,7 @@
       <h6><%= @activity.location_title %></h6><br/>
       <div class="row">
         <div id="map" style="width: 100%; height: 400px;"></div>
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GMAP_API'] %>&callback=initMap"></script>
         <script>
           function initialize() {
             var location = {lat: <%= @activity.latitude %>, lng: <%= @activity.longitude %>};
