Modified some on footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,8 +15,8 @@
           <ul>
             <li><a class="white-text" href="#!">Mangrove Tour</a></li>
             <li><a class="white-text" href="#!">Island Hopping</a></li>
-            <li><a class="white-text" href="#!">Car Rental</a></li>
-            <li><a class="white-text" href="#!">Honeymoon Packages</a></li>
+            <li><%= link_to 'Car Rental', rental_cars_path %></li>
+            <li><%= link_to 'Honeymoon', packages_path %></li>
           </ul>
         </div>
 
